--- a/packages/office.yaml
+++ b/packages/office.yaml
@@ -194,7 +194,7 @@ sensor:
 #####################################################################
 automation:
   ### Humidor is low - notify to refill
-  - alias: humidor_refill
+  - alias: Office Humidor Low
     initial_state: 'on'
     trigger:
       - platform: numeric_state
@@ -216,7 +216,7 @@ automation:
 
 
   ### Humidor OK - reset notification and indicator
-  - alias: humidor_ok
+  - alias: Office Humidor OK
     initial_state: 'on'
     trigger:
       - platform: numeric_state
@@ -240,7 +240,7 @@ automation:
   ### Turn off the lamp when OFF is selected
   - alias: RGB Select Off
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -260,7 +260,7 @@ automation:
   ### Reset input selection when lamp is turned off
   - alias: RGB Reset Off
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       - platform: state
         entity_id: light.office_desk_lamp
@@ -277,7 +277,7 @@ automation:
   ### RGB Select Cool
   - alias: RGB Cool
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -300,7 +300,7 @@ automation:
   ### RGB Select Warm
   - alias: RGB Warm
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -322,7 +322,7 @@ automation:
   ### RGB Select Warm Dim
   - alias: RGB Warm Dim
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -344,7 +344,7 @@ automation:
   ### RGB Select Blue
   - alias: RGB Blue
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -367,7 +367,7 @@ automation:
   ### RGB Select Cyan
   - alias: RGB Cyan
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -390,7 +390,7 @@ automation:
   ### RGB Select Green
   - alias: RGB Green
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -413,7 +413,7 @@ automation:
   ### RGB Select Pink
   - alias: RGB Pink
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -436,7 +436,7 @@ automation:
   ### RGB Select Red
   - alias: RGB Red
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -459,7 +459,7 @@ automation:
   ### RGB Select Violet
   - alias: RGB Violet
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -482,7 +482,7 @@ automation:
   ### RGB Select Yellow
   - alias: RGB Yellow
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
@@ -505,7 +505,7 @@ automation:
   ### RGB Select Random
   - alias: random_flux_rgb
     initial_state: 'on'
-    hide_entity: True
+    hide_entity: true
     trigger:
       platform: state
       entity_id: input_select.rgb_light
