--- a/packages/accent_lights.yaml
+++ b/packages/accent_lights.yaml
@@ -82,7 +82,8 @@ switch:
 ### Automation
 #####################################################################
 automation:
-  - alias: turn on accent lights at sunset
+  ### Turn on the accent_lights at sunset
+  - alias: Accent Lights On
     initial_state: 'on'
     trigger:
       - platform: sun
@@ -90,42 +91,21 @@ automation:
         offset: '-00:05:00'
 
     action:
-      - service: switch.turn_on
+      - service: homeassistant.turn_on
         entity_id: group.accent_lights
 
-
-  - alias: turn off accent lights weekdays
+  ### Turn off accent_lights if still on late night
+  - alias: Accent Lights Off
     initial_state: 'on'
     trigger:
       platform: time
-      at: '23:00:00'
+      at: '01:00:00'
 
     condition:
-      condition: time
-      weekday:
-        - sun
-        - mon
-        - tue
-        - wed
-        - thu
+      condition: state
+      entity_id: group.accent_lights
+      state: 'on'
 
     action:
-      - service: switch.turn_off
-        entity_id: group.accent_lights
-
-
-  - alias: turn off accent lamps weekends
-    initial_state: 'on'
-    trigger:
-      platform: time
-      at: '01:30:00'
-
-    condition:
-      condition: time
-      weekday:
-        - sat
-        - sun
-
-    action:
-      - service: switch.turn_off
+      - service: homeassistant.turn_off
         entity_id: group.accent_lights
