--- a/packages/climate_downstairs.yaml
+++ b/packages/climate_downstairs.yaml
@@ -34,26 +34,26 @@ homeassistant:
 
     group.downstairs_ecobee:
       <<: *contained
-      #order: 1
+      order: 2
 
-    script.ecobee_home:
+    script.ecobee_ds_home:
       <<: *contained
-      friendly_name: "Ecobee Home"
+      friendly_name: "Ecobee Downstairs Home"
       entity_picture: /local/ecobee.png
 
-    script.ecobee_away:
+    script.ecobee_ds_away:
       <<: *contained
-      friendly_name: "Ecobee Away"
+      friendly_name: "Ecobee Downstairs Away"
       entity_picture: /local/ecobee.png
 
-    script.ecobee_sleep:
+    script.ecobee_ds_sleep:
       <<: *contained
-      friendly_name: "Ecobee Sleep"
+      friendly_name: "Ecobee Downstairs Sleep"
       entity_picture: /local/ecobee.png
 
-    script.ecobee_resume:
+    script.ecobee_ds_resume:
       <<: *contained
-      friendly_name: "Ecobee Resume"
+      friendly_name: "Ecobee Downstairs Resume"
       entity_picture: /local/ecobee.png
 
     sensor.ds_avg_temp:
@@ -67,6 +67,10 @@ homeassistant:
     sensor.downstairs_humidity:
       <<: *contained
       icon: mdi:water-percent
+
+    sensor.ds_climate_mode:
+      <<: *contained
+      icon: mdi:nest-thermostat
 
     sensor.front_entry_fibaro_multisensor_temperature:
       <<: *contained
@@ -92,24 +96,17 @@ group:
       - sensor.front_entry_fibaro_multisensor_temperature
       - sensor.broadlink_sensor_temperature
       - sensor.ds_avg_temp
-      - sensor.ds_fan_state
       - sensor.downstairs_humidity
 
   Downstairs Ecobee:
     control: hidden
     entities:
-      - script.ecobee_home
-      - script.ecobee_away
-      - script.ecobee_sleep
-      - script.ecobee_resume
-
-
-#####################################################################
-### Ecobee
-#####################################################################
-ecobee:
-  api_key: !secret ecobee_api_key
-  hold_temp: True
+      - sensor.ds_climate_mode
+      - sensor.ds_fan_state
+      - script.ecobee_ds_home
+      - script.ecobee_ds_away
+      - script.ecobee_ds_sleep
+      - script.ecobee_ds_resume
 
 
 #####################################################################
@@ -123,6 +120,12 @@ sensor:
         unit_of_measurement: "F"
         value_template: >-
           {{ ((float(states.sensor.downstairs_temperature.state) + float(states.sensor.living_room_temperature.state) + float(states.sensor.office_temperature.state) + float(states.sensor.front_entry_fibaro_multisensor_temperature.state) + float(states.sensor.broadlink_sensor_temperature.state)) / 5) | round(1) }}
+
+  - platform: template
+    sensors:
+      ds_climate_mode:
+        friendly_name: "Downstairs HVAC Mode"
+        value_template: "{{ (states.climate.downstairs.attributes|default({})).mode|default('unknown') }}"
 
   - platform: template
     sensors:
@@ -145,28 +148,28 @@ sensor:
 ### Script
 #####################################################################
 script:
-  ecobee_sleep:
-    sequence:
-      - service: climate.set_hold_mode
-        data:
-          entity_id: climate.downstairs
-          hold_mode: 'sleep'
-
-  ecobee_home:
+  ecobee_ds_home:
     sequence:
       - service: climate.set_hold_mode
         data:
           entity_id: climate.downstairs
           hold_mode: 'home'
 
-  ecobee_away:
+  ecobee_ds_away:
     sequence:
       - service: climate.set_hold_mode
         data:
           entity_id: climate.downstairs
           hold_mode: 'away'
 
-  ecobee_resume:
+  ecobee_ds_sleep:
+    sequence:
+      - service: climate.set_hold_mode
+        data:
+          entity_id: climate.downstairs
+          hold_mode: 'sleep'
+
+  ecobee_ds_resume:
     sequence:
       - service: climate.ecobee_resume_program
         data:
@@ -178,7 +181,8 @@ script:
 ### Automation
 #####################################################################
 automation:
-  - alias: downstairs cooling schedule
+  ### Home Mode
+  - alias: Climate Downstairs Home Schedule
     initial_state: 'on'
     trigger:
       - platform: time
@@ -202,7 +206,8 @@ automation:
           hold_mode: 'home'
 
 
-  - alias: downstairs climate sleep mode
+  ### Sleep Mode Mode
+  - alias: Climate Downstairs Sleep Schedule
     initial_state: 'on'
     trigger:
       - platform: state
@@ -220,3 +225,19 @@ automation:
         data:
           entity_id: climate.downstairs
           hold_mode: 'sleep'
+
+
+  ### Peak Hours Mode
+  - alias: Climate Downstairs Peak Hours
+    initial_state: 'on'
+    trigger:
+      - platform: state
+        entity_id: input_boolean.peak_hours
+        from: 'off'
+        to: 'on'
+
+    action:
+      - service: climate.set_hold_mode
+        data:
+          entity_id: climate.downstairs
+          hold_mode: 'away'
