--- a/packages/climate_global.yaml
+++ b/packages/climate_global.yaml
@@ -3,8 +3,8 @@
 #    @description      :     global climate automations.
 ############################################################################
 automation:
-### Set Temperature Thresholds on away
-  - alias: set temperature thresholds on away
+  ### Set Climate on away
+  - alias: Climate Global Away Mode
     initial_state: 'on'
     trigger:
       - platform: state
@@ -29,21 +29,16 @@ automation:
           hold_mode: 'away'
 
     ########################
-    ### Set Upstairs Values
+    ### Set Upstairs Away
     ########################
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_ac
-          value: 90
-
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_heat
-          value: 66
+      - service: climate.set_hold_mode
+        data:
+          entity_id: climate.upstairs
+          hold_mode: 'away'
 
 
-### Set Temperature Thresholds upon return
-  - alias: set temperature thresholds on arrival
+  ### Set Temperature Thresholds upon return
+  - alias: Climate Global Resume
     initial_state: 'on'
     trigger:
       platform: state
@@ -55,7 +50,7 @@ automation:
 
     action:
     ########################
-    ### Set Downstairs Values
+    ### Set Downstairs Resume
     ########################
       - service: climate.ecobee_resume_program
         data:
@@ -63,46 +58,9 @@ automation:
           resume_all: 'true'
 
     ########################
-    ### Set Upstairs Values
+    ### Set Upstairs Resume
     ########################
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_ac
-          value: "{{ states.sensor.time_cool.state }}"
-
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_heat
-          value: "{{ states.sensor.time_heat.state }}"
-
-
-### Set Temperature Thresholds on peak hours
-  - alias: set temperature thresholds on peak hours
-    initial_state: 'on'
-    trigger:
-      - platform: state
-        entity_id: input_boolean.peak_hours
-        from: 'off'
-        to: 'on'
-
-    action:
-    ########################
-    ### Set Downstairs Values
-    ########################
-      - service: climate.set_hold_mode
+      - service: climate.ecobee_resume_program
         data:
-          entity_id: climate.downstairs
-          hold_mode: 'away'
-
-    ########################
-    ### Set Upstairs Values
-    ########################
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_ac
-          value: "{{ states.sensor.time_cool.state }}"
-
-      - service: input_slider.select_value
-        data_template:
-          entity_id: input_slider.upstairs_heat
-          value: "{{ states.sensor.time_heat.state }}"
+          entity_id: climate.upstairs
+          resume_all: 'true'
