--- a/packages/living_room_media.yaml
+++ b/packages/living_room_media.yaml
@@ -283,9 +283,9 @@ script:
 ### Automation
 #####################################################################
 automation:
+  ### Set Kodi scene when media is playing
   - alias: Kodi Scene Set
     initial_state: 'on'
-    hide_entity: True
     trigger:
       - platform: state
         entity_id: media_player.kodi_living_room
@@ -313,9 +313,10 @@ automation:
               scene.living_room_normal
             {% endif %}
 
-
-  - alias: living_room_tv_input_selector
+  ### Living Room TV Input Select
+  - alias: Living Room TV Select Input
     initial_state: 'on'
+    hide_entity: true
     trigger:
       - platform: state
         entity_id: input_select.living_room_tv_input
@@ -336,9 +337,10 @@ automation:
           entity_id: "{{ trigger.to_state.entity_id }}"
           option: Select an option...
 
-
-  - alias: onkyo_amp_input_selector
+  ### Living Room Onkyo Input Select
+  - alias: Living Room Amp Input Select
     initial_state: 'on'
+    hide_entity: true
     trigger:
       - platform: state
         entity_id: input_select.onkyo_amp_input
