--- a/packages/locks.yaml
+++ b/packages/locks.yaml
@@ -54,11 +54,11 @@ homeassistant:
     ################################################
     ## Automation
     ################################################
-    automation.unlock_door_when_megan_arrives:
+    automation.south_door_unlock_arrival:
       <<: *contained
       friendly_name: "Unlock Door for Megan"
 
-    automation.notify_if_unlocked_by_code:
+    automation.south_door_unlock_by_user:
       <<: *hidden
 
 
@@ -179,7 +179,8 @@ script:
 ### Automation
 #####################################################################
 automation:
-  - alias: unlock door when megan arrives
+  ### Unlock door when megan arrives
+  - alias: South Door Unlock On Arrival
     initial_state: 'on'
     trigger:
       - platform: state
@@ -194,8 +195,8 @@ automation:
     action:
       - service: script.unlock_megs
 
-
-  - alias: notify if unlocked by code
+  ### notify if unlocked by code
+  - alias: South Door Unlock By User
     initial_state: 'on'
     hide_entity: True
     trigger:
