--- a/packages/logger.yaml
+++ b/packages/logger.yaml
@@ -9,12 +9,12 @@ logger:
     homeassistant.components.media_player: critical
     homeassistant.components.climate: debug
     homeassistant.components.switch: debug
-    homeassistant.components.input_slider: debug
     homeassistant.components.automation: debug
     homeassistant.components.script: debug
     homeassistant.components.light: debug
-    homeassistant.components.zwave: debug
     homeassistant.components.scene: debug
+#    homeassistant.components.input_slider: debug
+#    homeassistant.components.zwave: debug
 #    homeassistant.components.cover: debug
 #    homeassistant.components.mqtt: debug
 #    homeassistant.components.device_tracker: debug
