--- a/packages/master_bedroom_fan.yaml
+++ b/packages/master_bedroom_fan.yaml
@@ -79,16 +79,35 @@ homeassistant:
       <<: *contained
 
     ################################################
+    ## Sensor
+    ################################################
+    sensor.master_bedroom_fan:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_1:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_2:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_3:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_4:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_5:
+      <<: *hidden
+
+    sensor.master_bedroom_fan_6:
+      <<: *hidden
+
+    ################################################
     ## Script
     ################################################
-    script.mbr_fan_speed_step_low:
+    script.mbr_fan_speed_step:
       <<: *contained
-      friendly_name: "Master Bedroom Fan Auto Low"
-      icon: mdi:fan
-
-    script.mbr_fan_speed_step_high:
-      <<: *contained
-      friendly_name: "Master Bedroom Fan Auto High"
+      friendly_name: "Master Bedroom Fan Auto"
       icon: mdi:fan
 
 
@@ -134,15 +153,53 @@ input_select:
 
 
 #####################################################################
+#  Sensor
+#####################################################################
+sensor:
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan"
+    name: "Master Bedroom Fan"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_1"
+    name: "Master Bedroom Fan 1"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_2"
+    name: "Master Bedroom Fan 2"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_3"
+    name: "Master Bedroom Fan 3"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_4"
+    name: "Master Bedroom Fan 4"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_5"
+    name: "Master Bedroom Fan 5"
+    value_template: "{{ value }}"
+
+  - platform: mqtt
+    state_topic: "/home/mbrfanspeed/master_bedroom_fan_6"
+    name: "Master Bedroom Fan 6"
+    value_template: "{{ value }}"
+
+
+#####################################################################
 ### Script
 #####################################################################
 script:
-  mbr_fan_speed_step_low:
+  mbr_fan_speed_step:
     sequence:
-      - service: input_select.select_option
-        data_template:
-          entity_id: input_select.master_bedroom_fan_speed
-          option: off
+      - service: homeassistant.turn_off
+        entity_id: group.mbr_fan_speed
 
       - delay: 2
 
@@ -160,50 +217,31 @@ script:
           option: 1
 
 
-  mbr_fan_speed_step_high:
-    sequence:
-      - service: input_select.select_option
-        data_template:
-          entity_id: input_select.master_bedroom_fan_speed
-          option: off
-
-      - delay: 2
-
-      - service: input_select.select_option
-        data_template:
-          entity_id: input_select.master_bedroom_fan_speed
-          option: 4
-
-      - delay:
-          hours: 2
-
-      - service: input_select.select_option
-        data_template:
-          entity_id: input_select.master_bedroom_fan_speed
-          option: 2
-
-
 #####################################################################
 ### Automation
 #####################################################################
 automation:
-  ## turn the master bed fan off at noon each day
-  - alias: turn off master bedroom fan
+  ### turn the master bed fan off
+  - alias: Master Bedroom Fan Off
     initial_state: 'on'
     trigger:
       - platform: time
         at: '12:00:00'
 
+    condition:
+      - condition: state
+        entity_id: switch.master_bedroom_fan
+        state: 'on'
+
     action:
-      - service: input_select.select_option
-        data:
-          entity_id: input_select.master_bedroom_fan_speed
-          option: Off
+      - service: switch.turn_off
+        entity_id: switch.master_bedroom_fan
 
 
-  ## select a fan speed
-  - alias: master_bedroom_fan_speed_selector
+  ### master_bedroom_fan_speed_selector
+  - alias: Master Bedroom Fan Speed Select
     initial_state: 'on'
+    hide_entity: true
     trigger:
       - platform: state
         entity_id: input_select.master_bedroom_fan_speed
@@ -215,46 +253,25 @@ automation:
     action:
       # Reset fan switch states
       - service: homeassistant.turn_off
-        data:
-          entity_id: group.mbr_fan_speed
+        entity_id: group.mbr_fan_speed
+
+      - delay:
+          seconds: 1.5
 
       # Turn on the corresponding fan speed switch
       - service: switch.turn_on
         data_template:
           entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
 
-      # Reset the Input Select to "Select an option..."
+      # Set the Input Selection to current option
       - service: input_select.select_option
         data_template:
-          entity_id: "{{ trigger.to_state.entity_id }}"
-          option: Select an option...
+          entity_id: input_select.master_bedroom_fan_speed
+          option: "{{ states.input_select.master_bedroom_fan_speed.state }}"
 
 
-  ## select fan options
-  - alias: master_bedroom_fan_option_selector
-    initial_state: 'on'
-    trigger:
-      - platform: state
-        entity_id: input_select.master_bedroom_fan_options
-
-    condition:
-      - condition: template
-        value_template: "{{ trigger.to_state.state != 'Select an option...' }}"
-
-    action:
-      # Turn the corresponding switch on to send the fan speed command
-      - service: switch.turn_on
-        data_template:
-          entity_id: "switch.master_bedroom_fan_{{ trigger.to_state.state|lower|replace(' ', '_') }}"
-
-      # Reset the Input Select to "Select an option..."
-      - service: input_select.select_option
-        data_template:
-          entity_id: "{{ trigger.to_state.entity_id }}"
-          option: Select an option...
-
-  ## fan auto-high
-  - alias: master_bedroom_fan_auto_high
+  ### master_bedroom_fan_auto
+  - alias: Master Bedroom Fan Auto
     initial_state: 'on'
     trigger:
       - platform: state
@@ -263,9 +280,111 @@ automation:
 
     condition:
       - condition: numeric_state
-        entity_id: sensor.upstairs_thermostat_temperature
-        above: 82
+        entity_id: sensor.upstairs_temperature
+        above: 71
+
+      - condition: numeric_state
+        entity_id: sensor.upstairs_temperature
+        below: 81
 
     action:
       - service: script.turn_on
-        entity_id: script.mbr_fan_speed_step_high
+        entity_id: script.mbr_fan_speed_step
+
+  ### Reset Fan Selection
+  - alias: Master Bedroom Fan Reset Selection
+    initial_state: 'on'
+    hide_entity: true
+    trigger:
+      - platform: state
+        entity_id: switch.master_bedroom_fan
+        to: 'off'
+
+    action:
+      # Reset the Input Select to "Select an option..."
+      - service: input_select.select_option
+        data_template:
+          entity_id: "{{ trigger.to_state.entity_id }}"
+          option: Select an option...
+
+
+#####################################################################
+#  Automation - Saves Switch State to MQTT
+#####################################################################
+  - alias: Master Bedroom Fan Speed State Save
+    initial_state: 'on'
+    hide_entity: true
+    trigger:
+      platform: state
+      entity_id: switch.master_bedroom_fan, switch.master_bedroom_fan_1, switch.master_bedroom_fan_2, switch.master_bedroom_fan_3, switch.master_bedroom_fan_4, switch.master_bedroom_fan_5, switch.master_bedroom_fan_6
+    action:
+      service: mqtt.publish
+      data_template:
+        topic: "/home/mbrfanspeed/{{ trigger.entity_id.split('.')[1] }}"
+        retain: true
+        qos: 1
+        payload: '{{ trigger.to_state.state }}'
+
+
+#####################################################################
+# Startup event - restores states of dropdowns, and RF Switches...etc
+#####################################################################
+  - alias: Master Bedroom Fan Speed State Restore
+    initial_state: 'on'
+    hide_entity: true
+    trigger:
+      platform: homeassistant
+      event: start
+    action:
+      - delay:
+          minutes: 1
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_1.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan_1
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_2.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else  -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan_2
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_3.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else  -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan_3
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_4.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else  -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan_4
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_5.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else  -%}
+              homeassistant.turn_off
+          {%- endif -%}    
+        entity_id: switch.master_bedroom_fan_5
+      - service_template: >
+          {%- if states.sensor.master_bedroom_fan_6.state | lower == "on" -%}
+              homeassistant.turn_on
+          {%- else  -%}
+              homeassistant.turn_off
+          {%- endif -%}
+        data:
+          entity_id: switch.master_bedroom_fan_6
